Revision history for UFL-WebAdmin-SiteDeploy

0.05
        - Refactor tests

0.04  Thu Jun  5 17:00:14 EDT 2008
        - Improve on tag handling of SVN::Notify::Mirror (changes
          configuration parameter from tag_regex to tag_pattern)
        - Refactor SVN::Notify::Mirror::Rsync::AutoCreateCheckout to
          Moose roles
        - Rename SVN::Notify::Mirror::Rsync::AutoCreateCheckout to
          SVN::Notify::Mirror::Rsync::AutoCheckout
        - Add logging of mirror operations using Log::Log4perl
        - Convert ufl_webadmin_sitedeploy_update_site.sh to a more
          flexible system using MooseX::App::Cmd

0.03  Mon Mar 31 19:31:33 EDT 2008
        - Add dependencies on the explicit path of binaries used in
          the scripts
        - Update Trac URL

0.02  Thu Jan 17 17:43:53 EST 2008
        - Improve handling of cases where an svn switch is needed
        - Switch to using Subversion bindings (SVN::Client) instead of
          relying on a command-line client

0.01  Fri Jan 11 17:34:05 EST 2008
        - Initial revision